--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Poster</title>
+    <title>Your Poster Title</title>
     <!-- Link to the CSS file -->
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <!-- Content of your website -->
     <div class="poster">
-        <h1>Your Poster Title</h1>
-        <p>Your poster content goes here.</p>
+        <h1>Welcome to My Poster</h1>
+        <p>This is where I display my awesome poster using CSS!</p>
     </div>
 </body>
 </html>
