--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
+            overflow: hidden; /* Prevent scrolling */
         }
         img {
             max-width: 100%;
-            height: auto;
+            max-height: 100%;
+            width: auto; /* Maintain aspect ratio */
+            height: auto; /* Maintain aspect ratio */
         }
     </style>
 </head>
